fix: tabs list overflowing on lower screens

--- a/scss/gifts.scss
+++ b/scss/gifts.scss
@@ -67,12 +67,6 @@ html {
 
 @media screen and (max-width: 482px) {
   #tabs {
-    gap: 0;
-  }
-}
-
-@media screen and (max-width: 350px) {
-  #tabs {
     flex-direction: column;
   }
 }
